--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp": "^4.0.2",
     "gulp-sass": "^5.1.0",
     "js-yaml": "^4.1.0",
+    "markdown-it": "^13.0.1",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.70.2",
     "sass": "^1.51.0"
