--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@11ty/eleventy-img": "^2.0.0"
   },
   "dependencies": {
+    "common-tags": "^1.8.2",
     "gorko": "^0.9.1",
     "gulp": "^4.0.2",
     "gulp-sass": "^5.1.0",
