--- a/package.json
+++ b/package.json
@@ -7,26 +7,35 @@
     "build": "npm-run-all clean gulp eleventy",
     "clean": "rimraf dist",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm-run-all gulp eleventy --parallel watch:gulp eleventy:serve",
+    "start": "npm-run-all clean rollup gulp eleventy --parallel watch:rollup watch:gulp eleventy:serve",
     "eleventy": "eleventy --quiet",
     "eleventy:serve": "eleventy --serve",
     "gulp:sass": "npx gulp sass",
     "gulp": "npx gulp build",
-    "watch:gulp": "npx gulp build --silent &&  gulp watch --silent"
+    "rollup": "rollup -c",
+    "watch:gulp": "npx gulp build --silent &&  gulp watch --silent",
+    "watch:rollup": "chokidar \"src/lib/**/*.{js,scss}\" --silent -c \"npm run rollup\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^1.0.1",
-    "@11ty/eleventy-img": "^2.0.0"
+    "@11ty/eleventy-img": "^2.0.0",
+    "chokidar-cli": "^3.0.0"
   },
   "dependencies": {
+    "@paypal/paypal-js": "^5.0.6",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "common-tags": "^1.8.2",
+    "firebase": "^9.8.1",
     "gorko": "^0.9.1",
     "gulp": "^4.0.2",
     "gulp-sass": "^5.1.0",
     "js-yaml": "^4.1.0",
+    "lit-element": "^3.2.0",
+    "lit-html": "^2.2.4",
     "markdown-it": "^13.0.1",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.70.2",
