--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "npm-run-all": "^4.1.5",
     "rollup": "^2.70.2",
     "sass": "^1.51.0",
-    "terser": "^5.13.1"
+    "terser": "^5.13.1",
+    "unistore": "^3.5.2"
   }
 }
