--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "gulp": "^4.0.2",
     "gulp-sass": "^5.1.0",
     "js-yaml": "^4.1.0",
-    "lit-element": "^3.2.0",
-    "lit-html": "^2.2.4",
+    "lit": "^2.2.5",
     "markdown-it": "^13.0.1",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.70.2",
