--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "chokidar-cli": "^3.0.0"
   },
   "dependencies": {
+    "@minify-html/js": "^0.8.0",
     "@paypal/paypal-js": "^5.0.6",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
+    "chalk": "^5.0.1",
     "common-tags": "^1.8.2",
     "firebase": "^9.8.1",
     "gorko": "^0.9.1",
@@ -36,6 +38,7 @@
     "js-yaml": "^4.1.0",
     "lit": "^2.2.5",
     "markdown-it": "^13.0.1",
+    "node-fetch": "^3.2.6",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.70.2",
     "sass": "^1.51.0",
