--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm-run-all clean gulp eleventy",
+    "build": "npm-run-all clean rollup gulp eleventy",
     "clean": "rimraf dist",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm-run-all clean rollup gulp eleventy --parallel watch:rollup watch:gulp eleventy:serve",
@@ -40,7 +40,10 @@
     "markdown-it": "^13.0.1",
     "node-fetch": "^3.2.6",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.14",
     "rollup": "^2.70.2",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.51.0",
     "terser": "^5.13.1",
     "unistore": "^3.5.2"
