--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.51.0",
     "terser": "^5.13.1",
-    "unistore": "^3.5.2"
+    "unistore": "^3.5.2",
+    "wicg-inert": "^3.1.2"
   }
 }
