--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "devDependencies": {
     "@11ty/eleventy": "^1.0.2",
+    "@11ty/eleventy-fetch": "^3.0.0",
     "@11ty/eleventy-img": "^2.0.0",
     "chokidar-cli": "^3.0.0"
   },
