--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@11ty/eleventy": "^1.0.2",
     "@11ty/eleventy-fetch": "^3.0.0",
     "@11ty/eleventy-img": "^2.0.0",
+    "@11ty/eleventy-plugin-rss": "^1.2.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^4.2.0",
     "chokidar-cli": "^3.0.0"
   },
   "dependencies": {
